# Lab08

./: CMakeLists.txt  CPackConfig.cmake  Dockerfile
.github/workflows/: Docker.yml  build.yml  release.yml
